create get all api
